gcc/testsuite/gm2/iso/fail/badarray2.mod
MODULE badarray ;

VAR
   c: CARDINAL ;
BEGIN
   c[1] := 5 ;
   c[1] := 6
END badarray.
